# bwq

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  brandwatch-query-operators.md  bwq.tmLanguage.json  edge_case_tests.txt  justfile  pyproject.toml  test_alignment.sh  test_queries.txt  test_tilde.txt  tombi.toml
.github/workflows/: release.yaml  release.yml  rust.yaml  rust.yml
crates/bwq/: Cargo.toml
crates/bwq/src/: args.rs  lib.rs  main.rs  output.rs
crates/bwq/src/commands/: check.rs  examples.rs  mod.rs  server.rs
crates/bwq/tests/: integration_test.rs
crates/bwq_linter/: Cargo.toml
crates/bwq_linter/resources/test/fixtures/valid/: complex_field_combinations.bwq  complex_proximity_operations.bwq  complex_social_media.bwq  valid_real_world_multiline.bwq
crates/bwq_linter/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  validator.rs
crates/bwq_linter/src/validation/: engine.rs  mod.rs
crates/bwq_linter/src/validation/rules/: field_rules.rs  mod.rs  operator_rules.rs  performance_rules.rs
crates/bwq_linter/tests/: integration_tests.rs
crates/bwq_server/: Cargo.toml
crates/bwq_server/src/: connection.rs  diagnostics_handler.rs  lib.rs  request_queue.rs  server.rs  task.rs  utils.rs  wikidata.rs
crates/bwq_server/src/server/: client.rs  handlers.rs  session.rs  utils.rs
crates/bwq_server/tests/: async_processing_test.rs  handler_integration_test.rs  session_integration_test.rs
resources/test/fixtures/valid/: complex_boolean_operations.bwq
resources/test/fixtures/warnings/: performance_issues.bwq
src/: ast.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  validator.rs
src/lsp/: diagnostics_handler.rs  mod.rs  server.rs  utils.rs
src/lsp/handlers/: diagnostics.rs  mod.rs
src/validation/: engine.rs  mod.rs
src/validation/rules/: field_rules.rs  mod.rs  operator_rules.rs  performance_rules.rs
tests/: integration_tests.rs
tests/fixtures/: comments_and_wildcards.bq  complex_near.bwq  field_operations.bq  invalid_mixed_operators.bq  valid_multiline.bq
vscode-extension/: .vscodeignore  README.md  language-configuration.json  package.json  pnpm-lock.yaml
vscode-extension/src/: entitySearchView.ts  extension.ts
vscode-extension/syntaxes/: bwq.tmLanguage.json
vscode-extension/webview/: entitySearch.css  entitySearch.js  reset.css  vscode.css
