[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Milo Stroik <mmstroik@gmail.com>"]
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/mmstroik/bwq"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.98"
bwq = { path = "crates/bwq" }
bwq_linter = { version = "0.4.3", path = "crates/bwq_linter" }
bwq_server = { version = "0.4.3", path = "crates/bwq_server" }
clap = { version = "4.5.40", features = ["derive"] }
crossbeam-channel = "0.5.15"
ignore = "0.4.23"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
pretty_assertions = "1.4.1"
rayon = "1.10.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
test-case = "3.3.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = { version = "0.1.40" }
urlencoding = { version = "2.1" }

[workspace.metadata.release]
push = true
shared-version = true
pre-release-commmit-message = "chore: release v{{version}}"
publish = false
consolidate-commits = true
tag-name = "v{{version}}"
tag-message = "chore: release v{{version}}"
