[package]
name = "bwq"
version = "0.4.3"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "A linter and language server for Brandwatch query files (.bwq)"
repository = { workspace = true }
license = { workspace = true }

[[bin]]
name = "bwq"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bwq_linter = { workspace = true }
bwq_server = { workspace = true }
clap = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
