[package]
name = "bwq_linter"
version = "0.4.1"
authors = { workspace = true }
edition = { workspace = true }
description = "Core linting library for Brandwatch query files (.bwq)"
repository = { workspace = true }
license = { workspace = true }

[package.metadata.release]
tag = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
test-case = { workspace = true }
