[package]
name = "bwq_linter"
version = "0.4.3"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Core linting library for bwq (Brandwatch query linter and language server)"
repository = { workspace = true }
license = { workspace = true }

[package.metadata.release]
tag = false

[lib]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
test-case = { workspace = true }
