[package]
name = "bwq_server"
version = "0.4.1"
authors = { workspace = true }
edition = { workspace = true }
description = "Language server for Brandwatch query files (.bwq)"
repository = { workspace = true }
license = { workspace = true }

[package.metadata.release]
tag = false

[dependencies]
anyhow = { workspace = true }
bwq_linter = { workspace = true }
crossbeam-channel = { workspace = true }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

