[package]
name = "bwq_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Language server for bwq (Brandwatch query linter and language server)"
repository.workspace = true
license.workspace = true

[package.metadata.release]
tag = false

[lib]

[dependencies]
anyhow.workspace = true
bwq_linter.workspace = true
crossbeam-channel.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
